Update 0.1.4: TS React for webview + refactoring.

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,9 +1,15 @@
 .vscode/**
 .vscode-test/**
+
 .gitignore
 .yarnrc
-vsc-extension-quickstart.md
+
 **/tsconfig.json
 **/.eslintrc.json
 **/*.map
 **/*.ts
+
+ProgressWebview/*
+!ProgressWebview/*.css
+
+todo
