--- a/package.json
+++ b/package.json
@@ -1,72 +1,81 @@
 {
-  "name": "zecrosUtility",
-	"publisher": "ZecroZhang",
-	"displayName": "Zecro's Utility",
-	"description": "VSCode stat tracker as well as some random utility that got thrown together.",
-	"version": "0.1.3",
-	"icon": "src/log.png",
-	"license": "GPL-3.0-or-later",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/ZecroZhang/vscode-stat-tracker-extension"
-	},
-	"engines": {
-		"vscode": "^1.66.0"
-	},
-	"categories": [
-		"Other"
-	],
-	"activationEvents": [
+  "name": "zecros-utility",
+  "publisher": "ZecroZhang",
+  "displayName": "Zecro's Utility",
+  "description": "VSCode stat tracker as well as some random utility that got thrown together.",
+  "version": "0.1.4",
+  "icon": "src/log.png",
+  "license": "GPL-3.0-or-later",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ZecroZhang/vscode-stat-tracker-extension"
+  },
+  "engines": {
+    "vscode": "^1.66.0"
+  },
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
     "onStartupFinished"
-	],
-	"main": "./out/extension.js",
-	"contributes": {
-		"commands": [
-			{
-				"command": "zecrosUtility.viewProgress",
-				"title": "View Progress"
-			},
-			{
-				"command": "zecrosUtility.deleteProgress",
-				"title": "Delete Progress"
-			},
-			{
-				"command": "zecrosUtility.deleteCLData",
-				"title": "Delete Language Stat Data"
-			},
-			{
-				"command": "zecrosUtility.deleteTodayProgress",
-				"title": "Delete Today's Progress"
-			},
-			{
-				"command": "zecrosUtility.deleteLanguageTypedStats",
-				"title": "Delete Language Typed Stats(excluding time)"
-			},
-			{
-				"command": "zecrosUtility.countStats",
-				"title": "Document Stats"
-			}
-		]
-	},
-	"scripts": {
-		"vscode:prepublish": "npm run compile",
-		"compile": "tsc -p ./",
-		"watch": "tsc -watch -p ./",
-		"pretest": "npm run compile && npm run lint",
-		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js"
-	},
-	"devDependencies": {
-		"@types/vscode": "^1.66.0",
-		"@types/glob": "^7.2.0",
-		"@types/mocha": "^9.1.0",
-		"@types/node": "14.x",
-		"@typescript-eslint/eslint-plugin": "^5.16.0",
-		"@typescript-eslint/parser": "^5.16.0",
-		"eslint": "^8.11.0",
-		"glob": "^7.2.0",
-		"mocha": "^9.2.2",
-		"typescript": "^4.5.5",
-		"@vscode/test-electron": "^2.1.3"
-	}
+  ],
+  "main": "./out/extension.js",
+  "contributes": {
+    "commands": [
+      {
+        "command": "zecrosUtility.viewProgress",
+        "title": "View Progress"
+      },
+      {
+        "command": "zecrosUtility.deleteProgress",
+        "title": "Delete Progress"
+      },
+      {
+        "command": "zecrosUtility.deleteCLData",
+        "title": "Delete Language Stat Data"
+      },
+      {
+        "command": "zecrosUtility.deleteTodayProgress",
+        "title": "Delete Today's Progress"
+      },
+      {
+        "command": "zecrosUtility.deleteLanguageTypedStats",
+        "title": "Delete Language Typed Stats(excluding time)"
+      },
+      {
+        "command": "zecrosUtility.countStats",
+        "title": "Document Stats"
+      }
+    ]
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run package",
+    "compile": "webpack",
+    "watch": "webpack --watch",
+    "package": "webpack --mode production --devtool hidden-source-map",
+    "pretest": "npm run compile-tests && npm run compile && npm run lint"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@types/glob": "^7.2.0",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "14.x",
+    "@types/react-dom": "^18.2.7",
+    "@types/vscode": "^1.66.0",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "@vscode/test-electron": "^2.1.3",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.11.0",
+    "glob": "^7.2.0",
+    "mocha": "^9.2.2",
+    "react-dom": "^18.2.0",
+    "ts-loader": "^9.4.4",
+    "typescript": "^4.5.5",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
+  }
 }
