--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,15 @@
 {
 	"compilerOptions": {
-		"module": "commonjs",
+		"module": "CommonJS",
 		"target": "ES2020",
-		"outDir": "out",
-    "rootDir": "./src",
+		"outDir": "./out/",
 		"lib": [
 			"ES2020"
 		],
 		"sourceMap": true,
-		"strict": true,   /* enable all strict type-checking options */
+		"strict": true,
 		"strictNullChecks": true
-		/* Additional Checks */
-		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
-		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
-		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
 	},
-  "include": [ "./src" ],
-	"exclude": [ "./ProgressWebview" ]
+  "include": [ "./src/" ],
+	"exclude": [ "./ProgressWebview/" ]
 }
